
2022-07-04  Ron Norman <rjn@inglenet.com>
	* Updated Copyright date to include 2022
	* Reverted back to using D-ISAM and V-ISAM names

2022-06-21  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: always build INDEXED handlers as separate libraries
	* libcobvc.c, libcobvb.c, libcobci.c, libcobdi.c, fileio.h: simplified
	* fisam.c: spelling correction for D-ISAM and VBISAM
	* fileio.c (cob_io_version), common.c: add "quiet" version
	  to output only name
	* fileio.c (cob_load_module): try to resolve entrypoint in libcob
	  if loading in external file did not work
	* fisam.c: re-arranged defines and checks

2022-05-30  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (num_byte_memcpy): removed, callers adjusted to
	  use memcpy instead

2022-05-24  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (cob_inspect_converting): fix possible stackoverflow
	* call.c (cob_resolve_internal): fix possible stack-use-after-scope,
	  happening if name conversion is active, introduced on 2020-11-29
	  and distributed with 3.1.2

2022-05-23  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (inspect_common_no_replace, inspect_common_replacing):
	  split from inspect_common to enable further optimization for
	  non replacing variant
	* strings.c (inspect_common_no_replace): for LEADING and TRAILING - do
	  not mark each occurrence, instead gather range, then set the marker
	  afterwards to reduce the number of expensive small memsets
	  (TALLYING for 20000 TRAILING spaces -> 1 memset instead of 20000)

2022-05-17  Ron Norman <rjn@inglenet.com>

	* common.h: add 'roffset' to cob_symbol to hold original offset of field
	* common.c: fix issue with a dump incorrectly reporting 'CODEGEN ERROR'

2022-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sign_ascii, cob_put_sign_ascii, cob_put_sign_ebcdic):
	  skip sign-adjustment if data is already without/with sign
	* common.c (cob_put_sign_ebcdic): invalid data for negative sign is now